[project]
name = "fastapi-backend"
version = "0.1.0"
description = "FastAPI backend service"
requires-python = ">=3.11"

dependencies = [
  # Core API
  "fastapi[all]",
  "uvicorn[standard]",

  # Database
  "sqlalchemy>=2.0",
  "psycopg2-binary",

  # Auth / Security
  "python-jose",
  "passlib[bcrypt]",

  # Scraping / HTTP
  "requests",
  "aiohttp",
  "beautifulsoup4",
  "lxml"
]